# Digital-Assistant-First

./: .dockerignore  .gitignore  Dockerfile  README.md  api_keys_status.csv  api_keys_status.xlsx  config.yaml  docker-compose.yml  dockerfile  installed_packages.txt  ollama_pull.sh  pyproject.toml  ragas_config.yaml  requirements.txt  restaurants.json  results.json  serp.py  serp.py.save  session.session  setup.py  streamlit_app.py  streamlit_app_good.py  streamlit_serpapi_table.py  supervisord.conf
.github/workflows/: main.yml  update.yml
.streamlit/: config.toml
content/: pp_data.json
content/json/: QA.json  bit_data.json  global_function.json  global_js.json  pp_data.json  questions_0.json
content/json/offers/: offers_by_category.json  offers_docs.json
content/json/offers/raw/: offers.json
content/text/: allowPull.txt  android.txt  drupal_vtb_payment.txt  pamyatka-po-platezham-v-byudzhet.txt  vtb_online_android.txt
digital_assistant_first/src/: generation.py  interface.py  internet_search.py  preprocessing.py
digital_assistant_first/src/geo_system/: two_gis.py
digital_assistant_first/src/telegram_system/: telegram_data_initializer.py  telegram_initialization.py  telegram_rag.py
digital_assistant_first/src/utils/: aviasales_parser.py  kv_faiss.py  logging.py  yndx_restaurants.py
docs/ProPro_report_Adamenko/: MA.JSON  report1.md
logs/: response.json
notebooks/: RAGAS-QA-generation.ipynb  RAGAS-QA.py  RAGAS_QA_Generation.ipynb  RAG_example.ipynb  internet_request.ipynb  server_request.ipynb  test.py
notebooks/collab/: Llama_3_1_8b_+_Unsloth_2x_faster_finetuning_ipynb_.ipynb
src/: .mem.ipynb.swp  QA.py  generation.py  interface.py  interface_good.py  internet_search.py  preprocessing.py  pull_models.py  ragas_runner.py  run_models.py  server.py  streamlit_serpapi_table.py  translation.py
src/geo_system/: two_gis.py
src/offergen/: __init__.py  agent.py  utils.py  vector_db.py
src/telegram_system/: telegram_collector.py  telegram_data_initializer.py  telegram_initialization.py  telegram_rag.py
src/utils/: aviasales_parser.py  check_serp_response.py  kv_faiss.py  load_utils.py  logging.py  paths.py  yndx_restaurants.py
tests/: dockerfile_test.py  streamlit_test.py
