[project]
name = "digital-assistant-first"
version = "1.0.0"
description = "AI Assistant with document processing and web integration"
authors = [
    {name = "ZakatZakat", email = "comradefrunze@gmail.com"}
]
readme = ""
requires-python = ">=3.10.14,<4.0"
dynamic = ["version"]

dependencies = [
    "streamlit (>=1.42.2,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "streamlit-aggrid (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "telethon (>=1.39.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "2captcha-python (>=1.5.1,<2.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)"

]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.5,<7.0.0"

[tool.poetry]
package-mode = false  